<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginActivity"
    tools:layout_editor_absoluteY="25dp"
    android:backgroundTint="@color/background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/auth_shape"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/login_img_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_img_1"
        android:text="@string/fitfinder"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppinssemibold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:id="@+id/txt_1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_1"
        android:text="@string/find_your_perfect_workout_partner"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppinsregular"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:id="@+id/txt_2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/txt_2"
        android:padding="30dp"
        android:id="@+id/ly_1">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:background="@drawable/btn_shape"
            android:layout_marginTop="10dp"
            android:hint="@string/example_gmail_com"
            android:paddingStart="10dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppinsregular"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:ems="10"
            android:inputType="textPassword"
            android:background="@drawable/btn_shape"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:paddingStart="10dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppinsregular"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password"
        android:fontFamily="@font/poppinssemibold"
        android:textSize="14sp"
        android:textColor="@color/secondaryColor"
        android:layout_below="@id/ly_1"
        android:id="@+id/tv_forgotPassword"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_forgotPassword"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:background="@drawable/btn_shape"
        android:width="300dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppinsbold"
        tools:layout_editor_absoluteX="164dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/btn_login"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Don_t_have_an_account"
            android:fontFamily="@font/poppinsregular"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="12sp"
            android:textColor="@color/primaryColor"
            android:id="@+id/tv_register"/>
    </LinearLayout>


</RelativeLayout>